# TypeWhale

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  SECURITY.md
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_REFACTOR_PLAN.md  MODEL_SETUP.md  PREVIEW_PIPELINE_DESIGN.md  SCREENSHOT_OVERLAY_QA.md  SCREENSHOT_TRANSLATION_SPEC.md  VAD_AND_WAVEFORM_DESIGN.md  产品需求文档.md  付费Beta发布包.md  商业化路线图.md  埋点方案.md  开发日志.md  构建日志.md  运营商业化启动计划.md
docs/design-mockups/: typewhale-macos14-native-layout.html
macos/: README.md
native/: LaunchProbe.c  TypeSpeakerApp.swift  TypeSpeakerNativeASR.c  TypeSpeakerNativeASR.h  build_and_log.sh  build_native_app.sh  package_dmg.sh  release_local_build.sh
native/Tests/: CapsuleTextBufferCheck.swift  DeveloperTermNormalizerCheck.swift  FinalRecognitionUseCaseCheck.swift  FinalSpeechGateCheck.swift  HotkeyComboReleaseCheck.swift  HotkeyModifierConflictCheck.swift  RecognitionTextNormalizerCheck.swift  ScreenshotSessionStateCheck.swift  ScreenshotTranslationCheck.swift  ScreenshotTranslationLayoutCheck.swift  SelectedSmartAITextEngineCheck.swift  SmartAIModelCheck.swift  SmartInputCheck.swift  SmartRewritePromptCheck.swift  SmartTranslationCheck.swift  SmartUsageCheck.swift  SpeechWorkflowStateCheck.swift
web/typewhale-beta/: index.html
windows/: .gitignore  README.md  TypeWhale.Windows.sln  WINDOWS_DEVELOPMENT_PLAN.md  WINDOWS_TEST_HANDOFF.md
windows/TypeWhale.Windows/: App.xaml  App.xaml.cs  THIRD_PARTY_NOTICES.md  TypeWhale.Windows.csproj
windows/native/: CMakeLists.txt
windows/scripts/: Build-App.ps1  (+2 more)
(+99 files in other folders)
